# tau-web-ui

./: .gitignore  Cargo.toml  README.md  deny.toml  justfile  lefthook.yml  renovate.json
gateway/: Cargo.toml
gateway/src/: lib.rs  main.rs  state.rs
gateway/src/adapters/: log.rs  mod.rs  otlp.rs  serve.rs
gateway/src/api/: agents.rs  caps.rs  checks.rs  config.rs  credentials.rs  graph.rs  guard.rs  ir.rs  meta.rs  mod.rs  packages.rs  plugins.rs  projects.rs  runs.rs  scope.rs  sessions.rs  ship.rs  skills.rs  tools.rs  workflows.rs  ws.rs
gateway/src/caps/: mod.rs
gateway/src/checks/: mod.rs
gateway/src/config/: mod.rs
gateway/src/credentials/: mod.rs
gateway/src/graph/: mod.rs  workflow_toml.rs
gateway/src/introspect/: mod.rs
gateway/src/ir/: mod.rs
gateway/src/plugins/: mod.rs
gateway/src/projects/: mod.rs
gateway/src/providers/: mod.rs
gateway/src/serve_client/: jsonrpc.rs  mod.rs
gateway/src/sessions/: mod.rs
gateway/src/ship/: mod.rs
gateway/src/skills/: mod.rs
gateway/src/store/: mod.rs
gateway/src/tools/: mod.rs
gateway/tests/: acceptance.rs  checks_api.rs  config_packages.rs  credential_bridge.rs  credentials_api.rs  gateway_guard.rs  graph_api.rs  ir_api.rs  plugins_api.rs  projects_api.rs  projects_registry.rs  real_tau_packages.rs  real_tau_sessions.rs  real_tau_skills.rs  real_tau_smoke.rs  real_tau_validate.rs  real_tau_workflow.rs  run_failure.rs  run_orchestration.rs  serve_client_e2e.rs  serve_kind.rs  sessions_api.rs  ship_api.rs  skills_api.rs  tools_api.rs  workflow_run.rs  workspace.rs  ws_e2e.rs
(+359 files in other folders)
