[workspace]
resolver = "2"
members = ["gateway", "fake-tau-serve"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["ws"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1"
ts-rs = "10"
tokio-util = { version = "0.7", features = ["rt"] }
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
indexmap = { version = "2", features = ["serde"] }
