[package]
name = "tau-gateway"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "tau_gateway"
path = "src/lib.rs"

[[bin]]
name = "tau-gateway"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
ts-rs.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
futures.workspace = true
toml = "0.8"
toml_edit = "0.25"
indexmap.workspace = true

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
tokio-tungstenite = "0.23"
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
